about - refs #3 added propic and a brief description

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,4 +1,13 @@
+.resume{
+  text-align: center;
+}
 .about-content{
   background-color: #48a9a6;
   color: white;
+}
+
+.propic{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
 }
