--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,14 @@
 #root{
   font-family: 'Open Sans', sans-serif;
 }
+
+
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #4281a4;
+  color: white;
+  border: none;
+  box-shadow: 0 5px 10px #ccc;
+}
